Add period and grammar change

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
       <img src="OnlineCommerceEnterprises-Light.svg" alt="Online Commerce Enterprises Logo">
     </div>
     <div class="container">
-        <h1>Coming Soon</h1>
+        <h1>Coming Soon.</h1>
         <br>
-        <p>We are working closely with online business owners and investors to build a new kind of parent company for online businesses.</p>
+        <p>We are working closely withs business owners and investors to build a new kind of parent company for online businesses.</p>
         <br>
         <p>Reach out to Sean directly for more details.</p>
         <br>
