Add phone and email handling

--- a/index.html
+++ b/index.html
@@ -18,8 +18,12 @@
         <br>
         <p>Reach out to Sean directly for more details.</p>
         <br>
-        <p class="email">sean@oncoen.com</p>
-        <p class="phone">(415) 671-6917</p>
+        <p class="email">
+          <a href="mailto:sean@oncoen.com">sean@oncoen.com</a>
+        </p>
+        <p class="phone">
+          <a href="tel:+14156716917">(415) 671-6917</a>
+        </p>
 
     </div>
     <div class="background">
