--- a/index.html
+++ b/index.html
@@ -5,16 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coming Soon</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="script.js" defer></script>
 </head>
 <body>
     <div class="logo-container">
-      <img src="OnlineCommerceEnterprises-Light.svg" alt="Online Commerce Enterprises Logo">
+        <img src="OnlineCommerceEnterprises-Light.svg" alt="Online Commerce Enterprises Logo">
     </div>
     <div class="container">
         <h1>Coming Soon.</h1>
         <br>
-        <p>We are working closely withs business owners and investors to build a new kind of parent company for online businesses.</p>
+        <p>We are working closely with business owners and investors to build a new kind of parent company for online businesses.</p>
         <br>
         <p>Reach out to Sean directly for more details.</p>
         <br>
@@ -24,14 +23,6 @@
         <p class="phone">
           <a href="tel:+14156716917">(415) 671-6917</a>
         </p>
-
-    </div>
-    <div class="background">
-        <div class="bubble"></div>
-        <div class="bubble"></div>
-        <div class="bubble"></div>
-        <div class="bubble"></div>
-        <div class="bubble"></div>
     </div>
 </body>
 </html>
